testdata/baselines/reference/submodule/conformance/YieldExpression17_es6.errors.txt
YieldExpression17_es6.ts(1,15): error TS2378: A 'get' accessor must return a value.
YieldExpression17_es6.ts(1,23): error TS1163: A 'yield' expression is only allowed in a generator body.
YieldExpression17_es6.ts(1,29): error TS2304: Cannot find name 'foo'.


==== YieldExpression17_es6.ts (3 errors) ====
    var v = { get foo() { yield foo; } }
                  ~~~
!!! error TS2378: A 'get' accessor must return a value.
                          ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
                                ~~~
!!! error TS2304: Cannot find name 'foo'.